--- a/bin/public/templates/dashboard/modals/try-error.html
+++ b/bin/public/templates/dashboard/modals/try-error.html
@@ -5,5 +5,6 @@
 </div>
 <div class="modal-body">
 	<p class="alert alert-danger">We received an error while we were trying to authorize you. It can come from your API Keys or your provider app settings.</p>
-	<pre>{{err|json}}</pre>
+	<h4>This error was returned by the server:</h4><br/>
+	<pre class="well">{{err}}</pre>
 </div>
