--- a/bin/public/templates/apps/thumb.html
+++ b/bin/public/templates/apps/thumb.html
@@ -8,7 +8,7 @@
             <span ng-repeat="domain in app.domains | limitTo:2 track by $index"><span class="gray">{{ domain}}</span><span ng-show="$index < 1 && $index < app.domains.length - 1">, </span></span><span ng-show="app.domains.length > 2">, <span class="gray">+ {{ app.domains.length - 2 }} other<span ng-show="app.domains.length - 2 > 1">s</span></span></span>
         </div>
         <div class="provider-logos">
-            <img title="{{ provider | capitalize }}" ng-repeat="provider in app.keysets" src="/api/providers/{{ provider }}/logo" alt="{{ provider | capitalize }} logo">
+            <img title="{{ provider | capitalize }}|" ng-repeat="provider in app.keysets" ng-src="/api/providers/{{ provider }}/logo" alt="{{ provider | capitalize }} logo">
             <div class="grayer" ng-show="app.keysets.length == 0 ">No provider has been added yet</div>
         </div>
         <div class="auth-type gray">
